--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-screens": "^3.7.2",
+    "react-native-svg": "^12.1.1",
     "react-native-swipe-list": "0.0.2",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^8.1.0",
